--- a/src/content/ideas/2025/parallelism-concurrency/index.mdx
+++ b/src/content/ideas/2025/parallelism-concurrency/index.mdx
@@ -5,7 +5,7 @@ date: '2025-07-29'
 updated: '2025-10-24'
 status: 'complete'
 type: 'article'
-tags: ['operating-systems', 'multithreading', 'distributed-systems', 'go', 'c++']
+tags: ['operating-systems', 'multithreading', 'distributed-systems', 'parallel-algorithms', 'go', 'c++']
 category: ['ideas']
 draft: false
 audience: 'All'
