--- a/src/content/ideas/2026/gpu-retro/index.mdx
+++ b/src/content/ideas/2026/gpu-retro/index.mdx
@@ -10,7 +10,7 @@ draft: false
 audience: 'All'
 media_subpath: "/ideas/gpu-retro/"
 image:
-  path: "hero-v3.png"
+  path: "./hero-v3.png"
   alt: 'Green ripples abstract art'
 hideCaption: true
 ---
