Prune tags and improve filtering

--- a/src/content/draft/gios-pr4-old.mdx
+++ b/src/content/draft/gios-pr4-old.mdx
@@ -4,7 +4,7 @@ description: 'Building a Distributed File System in C++: Lessons in Consistency 
 date: '2025-06-20'
 status: 'in-progress'
 type: 'project'
-tags: ['GIOS', 'operating-systems', 'c++', 'multithreading', 'IPC', 'RPC', 'distributed-systems']
+tags: ['operating-systems', 'c++', 'multithreading', 'IPC', 'RPC', 'distributed-systems']
 category: ['projects']
 draft: false
 audience: 'All'
