--- a/src/content/ideas/2023/semantic-search/index.mdx
+++ b/src/content/ideas/2023/semantic-search/index.mdx
@@ -4,7 +4,7 @@ description: "What's an embedding vector, and how can we use neural networks to 
 date: '2023-08-16'
 status: 'complete'
 type: 'article'
-tags: ['information-retrieval', 'search', 'NLP', 'data-science', 'algorithms', 'machine-learning']
+tags: ['information-retrieval', 'NLP', 'data-science', 'algorithms', 'machine-learning']
 category: ['seedling']
 draft: false
 audience: 'All'
