--- a/src/content/ideas/2025/ai-safety-evals-paper-club-notes/index.mdx
+++ b/src/content/ideas/2025/ai-safety-evals-paper-club-notes/index.mdx
@@ -5,7 +5,7 @@ date: '2025-09-09'
 updated: '2025-11-04'
 status: 'in-progress'
 type: 'note'
-tags: ['machine-learning', 'research', 'AI-alignment', 'mechanistic-interpretability', 'paper-club']
+tags: ['machine-learning', 'research', 'AI-safety', 'mechanistic-interpretability', 'paper-club']
 category: ['ideas']
 draft: false
 audience: 'All'
