--- a/src/content/ideas/2025/dl-final-project/index.mdx
+++ b/src/content/ideas/2025/dl-final-project/index.mdx
@@ -5,7 +5,7 @@ date: '2025-05-05'
 updated: '2025-10-20'
 status: 'in-progress'
 type: 'project'
-tags: ['deep-learning', 'large-language-models', 'mechanistic-interpretability', 'reasoning', 'pyTorch', 'MSCS']
+tags: ['deep-learning', 'large-language-models', 'mechanistic-interpretability', 'pyTorch', 'MSCS']
 category: ['projects']
 draft: true
 audience: 'All'
