--- a/src/content/ideas/2025/gios-pr4/index.mdx
+++ b/src/content/ideas/2025/gios-pr4/index.mdx
@@ -5,7 +5,7 @@ date: '2025-07-22'
 updated: '2025-10-24'
 status: 'complete'
 type: 'project'
-tags: ['GIOS', 'operating-systems', 'c++', 'multithreading', 'RPC', 'distributed-systems', 'MSCS']
+tags: ['operating-systems', 'c++', 'multithreading', 'distributed-systems', 'MSCS']
 category: ['projects']
 draft: false
 audience: 'Technical'
