--- a/src/content/ideas/2025/hdda-overview/index.mdx
+++ b/src/content/ideas/2025/hdda-overview/index.mdx
@@ -4,7 +4,7 @@ description: 'A survey of techniques for learning from data with high dimensions
 date: '2025-09-11'
 status: 'draft'
 type: 'retro'
-tags: ['HDDA', 'machine-learning', 'python', 'computer-science', 'MSCS', 'learning-in-public']
+tags: ['machine-learning', 'python', 'computer-science', 'MSCS', 'learning-in-public']
 category: ['mscs']
 draft: true
 audience: 'All'
