--- a/src/content/ideas/2025/hierarchical-reasoning-models/index.mdx
+++ b/src/content/ideas/2025/hierarchical-reasoning-models/index.mdx
@@ -4,7 +4,7 @@ description: 'A talk exploring novel neural architectures for complex reasoning 
 date: '2025-09-03'
 status: 'complete'
 type: 'talk'
-tags: ['machine-learning', 'deep-learning', 'reasoning', 'research', 'paper-club']
+tags: ['machine-learning', 'deep-learning', 'research', 'paper-club']
 draft: false
 audience: 'All'
 media_subpath: "/ideas/hierarchical-reasoning-models/"
