--- a/src/content/ideas/2025/language-diffusion-survey/index.mdx
+++ b/src/content/ideas/2025/language-diffusion-survey/index.mdx
@@ -4,7 +4,7 @@ description: 'A talk surveying diffusion models for language, from DDPM foundati
 date: '2025-05-28'
 status: 'complete'
 type: 'talk'
-tags: ['NLP', 'machine-learning', 'deep-learning', 'generative-models', 'transformer', 'paper-club']
+tags: ['NLP', 'machine-learning', 'deep-learning', 'generative-models', 'paper-club']
 draft: false
 media_subpath: "/ideas/language-diffusion-survey/"
 image:
