--- a/src/content/ideas/2025/ml-a1/index.mdx
+++ b/src/content/ideas/2025/ml-a1/index.mdx
@@ -5,7 +5,7 @@ date: '2025-08-10'
 updated: '2025-10-20'
 status: 'in-progress'
 type: 'project'
-tags: ['machine-learning', 'supervised-learning', 'python', 'data-science', 'MSCS']
+tags: ['machine-learning', 'python', 'data-science', 'MSCS']
 category: ['projects']
 draft: false
 audience: 'All'
