--- a/src/content/ideas/2026/gpu-p6/index.mdx
+++ b/src/content/ideas/2026/gpu-p6/index.mdx
@@ -4,7 +4,7 @@ description: 'Writing a FlashAttention CUDA kernel from scratch, tiling the atte
 date: '2026-02-25'
 status: 'complete'
 type: 'project'
-tags: ['GPU', 'CUDA', 'c++', 'python', 'computer-architecture', 'machine-learning', 'deep-learning', 'large-language-models', 'transformer', 'inference', 'MSCS']
+tags: ['GPU', 'CUDA', 'c++', 'python', 'pyTorch', 'computer-architecture', 'machine-learning', 'deep-learning', 'large-language-models', 'MSCS']
 category: ['projects']
 draft: false
 audience: 'Technical'
