--- a/src/content/draft/gios-pr1-first-draft.mdx
+++ b/src/content/draft/gios-pr1-first-draft.mdx
@@ -4,7 +4,7 @@ description: 'Building a Scalable Multithreaded File Server in C: Lessons from a
 date: '2025-06-16'
 status: 'in-progress'
 type: 'project'
-tags: ['GIOS', 'operating-systems', 'c', 'multithreading', 'socket-programming']
+tags: ['operating-systems', 'c', 'multithreading', 'socket-programming']
 category: ['projects']
 draft: false
 audience: 'All'
