--- a/src/content/ideas/2025/dl-a3/index.mdx
+++ b/src/content/ideas/2025/dl-a3/index.mdx
@@ -5,7 +5,7 @@ date: '2025-03-14'
 updated: '2025-10-20'
 status: 'in-progress'
 type: 'project'
-tags: ['deep-learning', 'pyTorch', 'transformer', 'NLP', 'MSCS']
+tags: ['deep-learning', 'pyTorch', 'NLP', 'MSCS']
 category: ['projects']
 draft: true
 audience: 'All'
