More fixes for mermaid :/

--- a/src/content/ideas/2026/llm-morality-mech-interp/index.mdx
+++ b/src/content/ideas/2026/llm-morality-mech-interp/index.mdx
@@ -3,9 +3,9 @@ title: "Same Parts, Different Wiring: Mechanistic Interpretability of Moral Fine
 description: "An exploration of how moral fine-tuning changes LLMs"
 date: "2026-02-26"
 # updated: '2026-10-20'
-status: "in-progress"
+status: "draft"
 type: "project"
-tags: ["AI-safety", "mechanistic-interpretability", "research", "deep-learning", "machine-learning"]
+tags: ["AI-safety", "mechanistic-interpretability", "research", "deep-learning", "reinforcement-learning", "machine-learning"]
 category: ['projects']
 draft: false
 audience: "All"
@@ -15,7 +15,7 @@ image:
   # path: "hero-clipart-blume-vintage-kunst-1631264278ngu.png"
   # path: "hero-backprop.png"
   path: "riff-on-tullawallal-circuit-by-rachel-gaffney-dawson.png"
-  alt: "Green ripples abstract art"
+  alt: "A riff on Tullawallal Circuit by Rachel Gaffney Dawson - go buy her art!"
   # maxWidth: "800px"
 hideCaption: true
 ---
